--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         padding: 0;
         /* box-sizing: border-box; */
       }
+      html {
+        scroll-behavior: smooth;
+      }
       :root {
         --yellow: #fdd460;
       }
